# CHAID-Segmenter

./: .gitignore  MANIFEST.in  NOTICE  README.md  notebook.ipynb  pyproject.toml  setup.py  summary.csv
chaid_segmenter/: __init__.py  binning.py  layout.py  metrics.py  plotting.py  rules.py  segmenter.py
examples/: dpd_segmentation.py  generate_sample_data.py
tests/: test_segmenter_binary.py  test_segmenter_binning.py  test_segmenter_continuous.py  test_segmenter_highcard.py  test_segmenter_inference.py  test_segmenter_loaders.py  test_segmenter_plotting.py  test_segmenter_rules.py
