[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaid-segmenter"
version = "0.1.1"
description = "Population segmentation using CHAID decision trees with automatic predictor binning"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "NDarayut", email = "darayutnhem009@gmail.com" }]
requires-python = ">=3.8"
keywords = ["CHAID", "segmentation", "decision tree", "binning", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "treelib",
]

[project.urls]
Homepage = "https://github.com/NDarayut/CHAID-Package"

[tool.setuptools.packages.find]
include = ["chaid_segmenter*", "CHAID*"]
